--- a/app/assets/stylesheets/messages.css
+++ b/app/assets/stylesheets/messages.css
@@ -45,12 +45,15 @@
 
 .chat-header {
   height: 100px;
+  padding: 0 40px;
 }
 .messages {
   background-color: #FAFAFA;
   height: calc(100vh - 100px - 90px);
+  padding: 46px 40px 0;
 }
 .form {
   background-color: #DDDDDD;
   height: 90px;
+  padding: 20px 40px;
 }
