--- a/app/assets/stylesheets/messages.css
+++ b/app/assets/stylesheets/messages.css
@@ -1,7 +1,6 @@
 .wrapper {
   display: flex;
 }
-
 .side-bar {
   background-color: #253141;
   width: 300px;
@@ -51,10 +50,28 @@
   background-color: #FFFFFF;
   width: calc(100vw - 300px);
 }
-
 .chat-header {
   height: 100px;
   padding: 0 40px;
+  display: flex;
+  justify-content: space-between;
+}
+
+.header-title {
+  color: #333;
+  font-size: 24px;
+  margin-top: 36px;
+}
+
+.header-button {
+  margin-top: 40px;
+}
+
+.header-button a {
+  text-decoration: none;
+  border: 1px solid darkred;
+  color: darkred;
+  padding: 20px;
 }
 
 .messages {
@@ -63,7 +80,6 @@
   padding: 46px 40px 0;
   overflow: scroll;
 }
-
 .message {
   margin: 10px 0 0 0;
 }
@@ -99,7 +115,6 @@
   padding: 20px 40px;
   display: flex;
 }
-
 .form-input {
   background-color: white;
   display: flex;
