--- a/app/views/messages/_side_bar.html.erb
+++ b/app/views/messages/_side_bar.html.erb
@@ -2,6 +2,11 @@
   <div class="header-name">
     <a href="#">Tom</a>
   </div>
+  <div class="create-room">
+    <a href="#">チャットを作成する</a>
+  </div>
+</div>
+
 <div class="rooms">
   <div class="room">
     <div class="room-name">
@@ -14,10 +19,7 @@
     </div>
   </div>
 </div>
-  <div class="create-room">
-    <a href="#">チャットを作成する</a>
-  </div>
-</div>
 
-<div class="rooms">
-</div>
+
+<%# <div class="rooms">
+</div> %>
